Back-end/src/main/java/com/example/error/ApiSubError.java
package com.example.error;

import io.swagger.annotations.ApiModel;

@ApiModel(description = "Abstraction for all possible API errors")
public interface ApiSubError {
}
